--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
